# scop

./: CMakeLists.txt  compile_flags.txt
includes/: Models.hpp  Render.hpp
models/: triangulated42.mtl
res/: basic.frag  basic.vert
srcs/: Models.cpp  Render.cpp  main.cpp
